<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.newnham.app.GCSE_Latin.view.MainActivity"
    tools:showIn="@layout/app_bar_main2">

...
        android:layout_marginTop="9dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonVerbGame"
        android:layout_marginLeft="-7dp"
        app:layout_constraintLeft_toLeftOf="@+id/buttonVerbGame"/>

    <Button
        android:id="@+id/buttonNounPagerSelection"
        android:layout_width="125dp"
        android:layout_height="115dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_rounded"
        android:text="@string/nounLists"
...
