<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.newnham.app.GCSE_Latin.view.NounEndingMenuFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/hello_blank_fragment"/>

    <Button
        android:id="@+id/buttonNoun1"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="67dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="142dp"
        android:background="@drawable/button_rounded"
        android:text="@string/noun1"
        android:textColor="@color/colorAccent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</FrameLayout>
