<resources>

    <string name="app_name">GCSE_Latin</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- MainActivity -->
    <!-- ============ -->
    <string name="verbLists">Verb Lists</string>
    <string name="nounLists">Noun Lists</string>
    <string name="verbQuiz">Verb Quiz</string>
    <string name="nounQuiz">Noun Quiz</string>
    <string name="nounEndings">Noun Endings</string>
    <string name="verbEndings">Verb Endings</string>

    <string name="latin_to_english">Latin-to-English</string>
    <string name="english_to_latin">English-to-Latin</string>
    <string name="reset">Reset Settings</string>
    <string name="resetDefault">Reset Settings to Default</string>
    <string name="about">About</string>

    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <!-- Verb Game -->
    <string name="next">Next</string>

    <!-- VerbPagerSelection -->
    <!-- ================== -->
    <string name="verbConjugation1">Conjugation I</string>
    <string name="verbConjugation2">Conjugation II</string>
    <string name="verbConjugation3">Conjugation III</string>
    <string name="verbConjugation4">Conjugation IV</string>

    <!-- Verb Pager -->
    <!-- ========== -->
    <string name="hint_conjNum">CONJ_NUMBER</string>
    <string name="hint_english_verb">ENGLISH_VERB</string>


    <!-- NounPagerSelection -->
    <!-- ================== -->
    <string name="noun1">Nouns I    </string>
    <string name="noun2">Nouns II   </string>
    <string name="noun3">Nouns III  </string>
    <string name="noun4">Nouns IV   </string>
    <string name="noun5">Nouns V    </string>
    <string name="pronoun">Pronoun    </string>
    <string name="conjunction">Conjunction</string>
    <string name="preposition">Preposition</string>
    <string name="adjective"> Adjective  </string>
    <string name="adverb">Adverb     </string>

    <!-- Noun Pager -->
    <!-- ========== -->
    <string name="hint_noun_description">NOUN_DESCRIPTION</string>
    <string name="hint_principal_parts_1">PRINCIPAL_PARTS1</string>
    <string name="hint_principal_parts_2">PRINCIPAL_PARTS2</string>
    <string name="hint_principal_parts_3">PRINCIPAL_PARTS3</string>
    <string name="hint_principal_parts_4">PRINCIPAL_PARTS4</string>
    <string name="hint_english_noun">ENGLISH_NOUN</string>


    <!-- Toasts -->
    <!-- ====== -->
    <string name="correct_toast">Correct</string>
    <string name="incorrect_toast">Incorrect. The Right Answer was %1$s</string>
    <string name="game_over"> GAME OVER</string>


    <!-- Verb Statistics -->
    <!-- =============== -->
    <string name="statistics"><b>Statistics</b></string>
    <string name="latestTest"><b>Latest Test</b></string>
    <string name="history"><b>History</b></string>

    <string name="total">TOTAL: </string>
    <string name="conjugation"><u><b>Conjugation</b></u></string>
    <string name="tense"><u><b>Tense</b></u></string>
    <string name="mood"><u><b>Mood</b></u></string>
    <string name="voice"><u><b>Voice</b></u></string>
    <string name="conj_1st"> - 1st </string>
    <string name="conj_2nd"> - 2nd </string>
    <string name="conj_3rd"> - 3rd </string>
    <string name="conj_4th"> - 4th </string>
    <string name="present"> - Present </string>
    <string name="imperfect"> - Imperfect </string>
    <string name="future"> - Future </string>
    <string name="perfect"> - Perfect </string>
    <string name="pluperfect"> - Pluperfect </string>
    <string name="futurePerfect"> - Future Perfect </string>
    <string name="indicative"> - Indicative </string>
    <string name="imperative"> - Imperative </string>
    <string name="subjunctive"> - Subjunctive </string>
    <string name="active"> - Active </string>
    <string name="passive"> - Passive </string>

    <!-- Noun Statistics -->
    <!-- =============== -->
    <string name="Type"><u><b>Type</b></u></string>
    <string name="Declension"><u><b>Declension</b></u></string>
    <string name="Case"><u><b>Case</b></u></string>
    <string name="decl_1st"> - 1st </string>
    <string name="decl_2nd"> - 2nd </string>
    <string name="decl_3rd"> - 3rd </string>
    <string name="decl_4th"> - 4th </string>
    <string name="Noun"> - Noun </string>
    <string name="Preposition"> - Preposition </string>
    <string name="Conjunction"> - Conjunction </string>
    <string name="Adjective"> - Adjective </string>
    <string name="Adverb"> - Adverb </string>
    <string name="Superlative"> - Superlative </string>
    <string name="Comparative"> - Comparative </string>
    <string name="Nominative"> - Nominative </string>
    <string name="Accusative"> - Accusative </string>
    <string name="Genitive"> - Genitive </string>
    <string name="Dative"> - Dative </string>
    <string name="Ablative"> - Ablative </string>
    <string name="Vocative"> - Vocative </string>


    <!-- About -->
    <!-- ===== -->

    <string name="aboutText"> Welcome to Birkbeck Latin! This is a free app geared towards students on the
        \'Beginner\'s Latin\' course at Birkbeck College, University of London, but this is
        by no means a prerequisite; anyone wanting to learn Latin will find this app useful! The vocabulary
        is based on the book \'Reading Latin\' by Jones and Sidwell.
        \n
        \nBirkbeck Latin contains two translation games, one for verbs and another for nouns, pronouns, adjectives etc.
        The format is multiple choice, and detailed statistics of your performance is shown at the end of
        the game. Moreover, this app contains learning algorithms so that the grammatical difficulty
        of the questions increase as your understanding of Latin progresses. To complement the games,
        there are scrolling lists of verbs (by conjugation), nouns (by declension), adjectives etc.
        that can be used for revision purposes.
        \n
        \nThis app is an MSc Computer Science project by Stewart Newnham at Birkbeck College, University of London.
    </string>


</resources>
